solve overflow problem

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   padding: 0;
   margin: 0;
+  height: fit-content;
 }
 
 
